# Brodmann17FaceDetector

./: LICENSE  README.md
example/: CMakeLists.txt  example.cpp
include/: libbrodmann17.h
python/: brodmann17_face_detector.py  example.ipynb
